# silk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: README.md  eigen.cmake  fabsim_recipe.cmake  geometry_central.cmake  googletest.cmake  ipc_toolkit.cmake  libigl.cmake  polyscope.cmake  tinyad.cmake
examples/: 01_triangle.cpp  02_deformation.cpp  03_deformed_grids.cpp  05_energy_minimization.cpp  06_writing_to_disk.cpp  07_player.cpp  README.md  visualize_mesh.cpp
examples/collisions/: ipc_bacics.cpp
examples/falling/: cloth_art.cpp  falling.cpp  falling_towel.cpp  folding.cpp  folding_kappa.cpp  friction.cpp
examples/procedural_meshes/: box.cpp  orthogonal_triangles.cpp  regular_tetrahedron.cpp  towel_above_table.cpp  triangulate_polygonal_boundary.cpp
examples/springs/: single_spring.cpp
examples/two_tetrahedra/: two_tetrahedra.cpp  two_tetrahedra_incremental_potential.cpp
examples/two_triangles/: bending_triangles.cpp  create_scalar_function.cpp  dangling_triangle.cpp  fixed_triangle.cpp  new_triangles.cpp  static_triangle.cpp  two_triangles_collision.cpp  two_triangles_pytorch.cpp  two_triangles_tinyad.cpp  two_triangles_tinyad_simulation.cpp  two_triangles_tinyad_sparse.cpp
examples/visualization/: combined_elasticity.cpp  combined_structures.cpp  play_simulation.cpp
examples/volumes/: static_tetrahedron.cpp
include/silk/: IGLGeometryCentralConvert.hh  conversions.hh  energies.hh  mesh_construction.hh  simple_meshes.hh  types.hh  visualization.hh
include/silk/deformation/: deformation_gradient.hh  deformed_shape.hh  rest_shape.hh  rest_shapes.hh
include/silk/energy/: baraff_witkin.hh  energy_function.hh  energy_mapping.hh
include/silk/geometry/: area.hh
include/silk/gui/: frame_player.hh
include/silk/math/: flatten.hh  inverse.hh
include/silk/optimization/: line_search.hh
src/: main.cpp  simple_meshes.cpp
test/: deformation_gradient_test.cpp  energies_test.cpp  flatten_unflatten_test.cpp
